--- a/Complete Python Reference.ipynb
+++ b/Complete Python Reference.ipynb
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2161,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2190,7 @@
     "          ['Swag']]\n",
     "for place, prizelist in enumerate(Prizes):\n",
     "    print(f\"Place # {place+1} gets the following prize(s)\")\n",
-    "    print(f\"{','.join([prize for prize in prizelist])}\")"
+    "    print(f\"{','.join(prizelist)}\")"
    ]
   },
   {
@@ -2398,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2952,7 +2952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2961,7 +2961,7 @@
        "{'ms': 'India', 'virat': 'India', 'rohit': 'India', 'dhawan': 'India'}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3039,22 +3039,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "India\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "{'ms': 'India', 'rohit': 'India', 'dhawan': 'India'}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "players_dict.pop('virat')\n",
+    "print(players_dict.pop('virat'))\n",
     "players_dict"
    ]
   },
@@ -3200,7 +3207,7 @@
     "Families = {'Peter':['Paul','Patty'], 'Jim':['Tommy','Timmy','Tammy'], 'Carlos':['Diego']}\n",
     "for Parent, Children in Families.items():\n",
     "        print(f\"{Parent} has {len(Children)} kid(s):\" )\n",
-    "        print(f\"{','.join([Child for Child in Children])}\")"
+    "        print(f\"{','.join(Children)}\")"
    ]
   },
   {
@@ -3320,7 +3327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3333,8 +3340,7 @@
     }
    ],
    "source": [
-    "# shallow copy(if the copy is modied original is not modified)\n",
-    "# use .copy for objects not having child objects \n",
+    "# shallow copy \n",
     "lists = [1,2,3,4,5]\n",
     "lists1 = lists.copy()\n",
     "lists[0] = 100\n",
@@ -3363,15 +3369,12 @@
     }
    ],
    "source": [
-    "# shallow copy(if the copy is modied then original also modifies)\n",
-    "# use the below python lib if obj has child objs \n",
     "import copy \n",
     "nested_list = [['india','australia','newzealand','england'],['ms','steve smith','williamson','ben stokes']]\n",
     "nested_list_copy = nested_list\n",
     "nested_list_copy[0][2] = 'new-zealand'\n",
     "print('shallow copy')\n",
     "print(nested_list_copy[0],':',nested_list[0])\n",
-    "#deep copy (if the copy is modied original not modifies)\n",
     "nested_list_deep_copy = copy.deepcopy(nested_list)\n",
     "nested_list_deep_copy[0][2] = 'NZW'\n",
     "print('deep copy')\n",
