--- a/Complete Python Reference.ipynb
+++ b/Complete Python Reference.ipynb
@@ -1914,7 +1914,8 @@
    "source": [
     "# range(start,stop,increment)\n",
     "even = [val for val in range(21) if val%2 == 0 or val%9 == 0]\n",
-    "print(even, sum(val for val in range(21) if val%2 ==0 or val%9 == 0))"
+    "# here we are using generators \n",
+    "print(even, sum(val for val in range(21) if val%2 ==0 or val%9 == 0)) "
    ]
   },
   {
@@ -2061,6 +2062,28 @@
     "tags = ['man', 'you', 'are', 'awesome']\n",
     "entries = [['man', 'thats'],[ 'right','awesome']]\n",
     "print([tag for tag in tags for entry in entries if tag in entry])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[90, 93, 91, 93, 91, 98, 91, 94, 94, 97]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list comprehension with walrus\n",
+    "import random \n",
+    "[temp for _ in range(20) if (temp := random.randrange(90, 110)) < 100]"
    ]
   },
   {
@@ -2826,7 +2849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2849,6 +2872,27 @@
     "my_dict['age'] = 27\n",
     "print(my_dict)\n",
     "print(my_dict['languages'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upendra\n",
+      "27\n",
+      "['python', 'java script', 'java']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterating dict\n",
+    "for key in my_dict:\n",
+    "    print(my_dict[key])"
    ]
   },
   {
@@ -3390,7 +3434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3402,6 +3446,7 @@
       "5.468\n",
       "5.643\n",
       "5\n",
+      "b'upendra'\n",
       "b'upendra'\n"
      ]
     }
@@ -3531,7 +3576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3542,7 +3587,9 @@
       "abc c\n",
       "{'name': 'ramu', 'score': 90, 'age': 24}\n",
       "GameOfThrones\n",
-      "wd\n"
+      "wd\n",
+      "(2, 5)\n",
+      "(4, 12)\n"
      ]
     }
    ],
@@ -3551,23 +3598,65 @@
     "print(sum([1,2,3,4,5]),min([1,2,3,4,5]),max([1,2,3,4,5]))\n",
     "# using min and max with key \n",
     "l =[\"ab\", \"abc\", \"bc\", \"c\"]\n",
-    "print(max(l, key = lambda element:len(element)), min(l, key = lambda element:len(element)))\n",
+    "# min and max with length \n",
+    "print(max(l, key = len), min(l, key = len))\n",
     "# using min and max in a dict \n",
     "l = [{'name':'ramu', 'score':90, 'age':24},\n",
     "     {'name':'golu', 'score':70, 'age':19}]\n",
     "print(max(l, key = lambda item:item.get('age')))\n",
-    "# get key with max value \n",
-    "Tv = {'BreakingBad':100, 'GameOfThrones':1292, 'TMKUC' : 88}\n",
-    "Keymax = max(Tv, key= Tv.get)\n",
-    "print(Keymax)\n",
     "# get max with key as starting letter of a word\n",
     "ls = [\"ac\",\"cd\",\"ef\",\"wd\"]\n",
-    "print(max(ls, key = lambda el:el[0]))"
+    "print(max(ls, key = lambda el:el[0]))\n",
+    "# minimum and maximum in a list of tuples\n",
+    "data = [(1, 10), (2, 5), (3, 8), (4, 12)]\n",
+    "print(min(data, key=lambda x: x[1]))\n",
+    "print(max(data, key=lambda x: x[1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GameOfThrones\n",
+      "The key with the maximum price is: date\n",
+      "The key with the maximum quantity is: cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get key with max value \n",
+    "Tv = {'BreakingBad':100, 'GameOfThrones':1292, 'TMKUC' : 88}\n",
+    "Keymax = max(Tv, key= Tv.get)\n",
+    "print(Keymax)\n",
+    "\n",
+    "data = {\n",
+    "    'apple': {'price': 10, 'quantity': 50},\n",
+    "    'banana': {'price': 15, 'quantity': 30},\n",
+    "    'cherry': {'price': 7, 'quantity': 75},\n",
+    "    'date': {'price': 20, 'quantity': 40}\n",
+    "}\n",
+    "\n",
+    "# Get the key with the maximum price\n",
+    "max_price_key = max(data, key=lambda k: data[k]['price'])\n",
+    "\n",
+    "print(f\"The key with the maximum price is: {max_price_key}\")\n",
+    "# Output: The key with the maximum price is: date\n",
+    "\n",
+    "# Get the key with the maximum quantity\n",
+    "max_quantity_key = max(data, key=lambda k: data[k]['quantity'])\n",
+    "\n",
+    "print(f\"The key with the maximum quantity is: {max_quantity_key}\")\n",
+    "# Output: The key with the maximum quantity is: cherry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3576,7 +3665,10 @@
      "text": [
       "adenpru\n",
       "runner up is:5\n",
-      "is list sorted : True and the list is [1, 3, 5, 6]\n"
+      "is list sorted : True and the list is [1, 3, 5, 6]\n",
+      "['arjun', 'upendra', 'upendra']\n",
+      "['upendra', 'upendra', 'arjun']\n",
+      "['arja', 'arju']\n"
      ]
     }
    ],
@@ -3588,7 +3680,12 @@
     "sorted_list = sorted([5,6,1,3])\n",
     "print(f'runner up is:{sorted_list[-2]}')\n",
     "isSortedList = all(sorted_list[val] <= sorted_list[val+1] for val in range(len(sorted_list)-1))\n",
-    "print(f'is list sorted : {isSortedList} and the list is {sorted_list}')"
+    "print(f'is list sorted : {isSortedList} and the list is {sorted_list}')\n",
+    "# sorting based on key \n",
+    "names = [\"upendra\",\"arjun\",\"upendra\"]\n",
+    "print(sorted(names,key=len)) # ascending length\n",
+    "print(sorted(names,key=lambda name:-len(name))) # descending length \n",
+    "print(sorted(['arju','arja'],key=lambda name: name[::-1])) #key: reversed word "
    ]
   },
   {
@@ -3614,21 +3711,19 @@
     "weights = [65,10,70]\n",
     "ages = [27,4,33]\n",
     "print(sorted(zip(names,weights,ages)))\n",
-    "print(sorted(zip(names,weights,ages),reverse = True))\n",
-    "print(set(sorted(names,key=len))) # ascending length\n",
-    "print(sorted(names,key=lambda name:-len(name))) # descending length \n",
-    "print(sorted(['arju','arja'],key=lambda name: name[::-1])) #key: reversed word "
+    "print(sorted(zip(names,weights,ages),reverse = True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "dict_items([('b', 2), ('c', 3), ('a', 1)])\n",
       "{'a': 1, 'b': 2, 'c': 3}\n"
      ]
     }
@@ -3636,12 +3731,13 @@
    "source": [
     "# sorting a dictionary by key\n",
     "a_dictionary = {\"b\": 2, \"c\": 3, \"a\": 1}\n",
+    "print(a_dictionary.items())\n",
     "print(dict(sorted(a_dictionary.items())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3664,8 +3760,6 @@
    ],
    "source": [
     "# sorting list of dicts using dict values \n",
-    "from operator import itemgetter\n",
-    "\n",
     "lis = [{\"name\" : \"upendra\", \"age\" : 27},\n",
     "{\"name\" : \"lalli\", \"age\" : 30},\n",
     "{\"name\" : \"arjun\" , \"age\" : 5},\n",
@@ -3693,7 +3787,7 @@
     "print(\"The list printed sorting by name in desc and age in asc:\")\n",
     "print(sorted(sorted(lis, key = lambda i: i['age']), key = lambda i: i['name'],reverse=True))\n",
     "#sort list of tuples based on 1st and 2nd item in the tuple \n",
-    "print(sorted(todo), sorted(todo, key = lambda i:i[1]), sorted(todo, key = itemgetter(1), reverse = True))"
+    "print(sorted(todo), sorted(todo, key = lambda i:i[1]), sorted(todo, key = lambda i:i[1], reverse = True))"
    ]
   },
   {
@@ -3753,7 +3847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -4040,7 +4134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4238,46 +4332,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "32\n"
      ]
     }
    ],
    "source": [
     "# functions returning lambda expressions\n",
     "def create_multiplier(a):\n",
-    "    return lambda x: x * a\n",
+    "    return lambda x: a ** x\n",
     "print(create_multiplier(2)(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[4.123105625617661, 5.385164807134504, 6.708203932499369]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.123105625617661, 5.385164807134504, 6.708203932499369]\n",
+      "[4.123105625617661, 5.385164807134504, 6.708203932499369]\n"
+     ]
     }
    ],
    "source": [
     "from math import sqrt\n",
     "x_coords = [1,2,3]\n",
     "y_coords = [4,5,6]\n",
-    "result = list(map(lambda x,y:sqrt(x**2 + y**2), x_coords, y_coords))\n",
-    "result"
+    "print(list(map(lambda x,y:sqrt(x**2 + y**2), x_coords, y_coords)))\n",
+    "print([sqrt(x**2 + y**2) for x,y in zip(x_coords, y_coords)])"
    ]
   },
   {
@@ -4363,7 +4455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -4381,11 +4473,8 @@
     "def main():\n",
     "    family('arjun','upen','hari')\n",
     "def family(*varargs):\n",
-    "    if len(varargs):\n",
-    "        for s in varargs:\n",
-    "            print(s)\n",
-    "    else:\n",
-    "        print(family)\n",
+    "    for s in varargs:\n",
+    "        print(s)\n",
     "main()"
    ]
   },
@@ -4435,7 +4524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4476,7 +4565,7 @@
     }
    ],
    "source": [
-    "# spread operator(for list and dict) \n",
+    "# spread operator(for list and dict) -> unpacking list & dict  \n",
     "print(datetime(*list((1993,10,5,7,30,00))))\n",
     "data = {'city':'gudivada','region':'ap','country':'india'}\n",
     "'You are near: {city}, {region}, {country}'.format(**data)"
@@ -4619,7 +4708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -4634,18 +4723,18 @@
     "def divide(x, y):\n",
     "    return x / y\n",
     "def second_argument_isnt_zero(func):\n",
-    "    def safe_version(*args):\n",
+    "    def inner_fn(*args):\n",
     "        if args[1] == 0:\n",
     "            print('Warning: second argument is zero')\n",
     "            return\n",
     "        return func(*args)\n",
-    "    return safe_version\n",
+    "    return inner_fn\n",
     "print(second_argument_isnt_zero(divide)(10,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -9136,7 +9225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9154,7 +9243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -9169,6 +9258,7 @@
       "am\n",
       "upendra\n",
       "varma!\n",
+      "I\n",
       "100\n",
       "110\n",
       "120\n",
@@ -9183,7 +9273,7 @@
    "source": [
     "l = ['I', 'am', 'upendra', 'varma!']\n",
     "# cycle generates a iterator and we can iterate using islice which acts as a range for a iterator \n",
-    "for ite in itertools.islice(itertools.cycle(l),8):\n",
+    "for ite in itertools.islice(itertools.cycle(l),9):\n",
     "    print(ite)\n",
     "# counters(returns consecutive values)\n",
     "count1 = itertools.count(100, 10)\n",
@@ -9347,22 +9437,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 6, 10]\n",
+      "[1, 2, 6, 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# works similar to reduce \n",
+    "from itertools import accumulate\n",
+    "import operator\n",
+    "# Accumulated sums\n",
+    "print(list(accumulate([1, 2, 3, 4])))\n",
+    "# Output: [1, 3, 6, 10]\n",
+    "\n",
+    "# Accumulated products\n",
+    "print(list(accumulate([1, 2, 3, 4], operator.mul)))\n",
+    "# Output: [1, 2, 6, 24]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9']\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "45"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# chain:- combines ierators; use it to extracting all the charecters from the strings in a list \n",
+    "# flattens a list of any data type(string, list, tuple) \n",
+    "print(list(itertools.chain.from_iterable(['123', '456', '789'])))\n",
     "sum(list(map(int, list(itertools.chain.from_iterable(['123', '456', '789'])))))"
    ]
   },
@@ -10439,7 +10564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -10487,7 +10612,7 @@
     "# sort list of objects by key(number/string) by(prop/method)\n",
     "prodSortedListByPrice = list(sorted(prodList,key = attrgetter('price')))\n",
     "prodSortedListByPriceDesc = list(sorted(prodList,key = attrgetter('price'), reverse=True))\n",
-    "prodSortedListByName = list(sorted(prodList,key = attrgetter('name')))\n",
+    "prodSortedListByName = list(sorted(prodList,key = lambda prod:prod.name))\n",
     "print('prodSortedListByPrice:')\n",
     "print(list(map(lambda prod:prod.__dict__ , prodSortedListByPrice)))\n",
     "print('\\nprodSortedListByPriceDesc:')\n",
@@ -10778,7 +10903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10796,9 +10921,6 @@
     "\n",
     "\n",
     "class GraphicShape(ABC):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
     "    @abstractmethod\n",
     "    def calcArea(self):\n",
     "        pass\n",
@@ -10864,7 +10986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -11076,7 +11198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -11159,7 +11281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
